fixed invisible navbar toggle icon

--- a/style.css
+++ b/style.css
@@ -23,6 +23,19 @@
 .navbarScroll.navbarDark{
     background-color:black;
 }
+
+.navbar-toggler{
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-right: 15px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+}
+
 .hero_title{
     font-size:4.5rem;
 }
